Refactor, rebuild front | bug fixes
